testsuite/escript/errors/errors003-function-parameter-same-name-as-function.err2
errors003-function-parameter-same-name-as-function.src:2:14: error: Cannot define a function parameter with the same name as function 'print'.
